workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_generics_w80.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 430
expression: rendered
---
// <unrendered module>

/**
 * A generic box wrapping a single value.
 */
export interface Box<T> {
    /**
     * The contained value.
     */
    value: T;
}

export function constructor(v: T): void;

/**
 * Unwrap the value.
 */
export function unwrap(): T;

/**
 * A generic stack built on an array (Vec<T> analogue).
 */
export interface Stack<T> {
    /**
     * Number of elements in the stack.
     */
    readonly size: number;
    /**
     * Push an element.
     */
    push(item: T): void;
    /**
     * Pop the top element.
     */
    pop(): T | null;
    /**
     * Peek without removing.
     */
    peek(): T | null;
}

/**
 * A key/value store (HashMap<K,V> analogue).
 */
export interface Store<K, V> {
    get(key: K): V | null;
    set(key: K, value: V): void;
    delete(key: K): boolean;
}

/**
 * Tag set (HashSet<T> analogue).
 */
export interface TagSet<T> {
    add(tag: T): void;
    has(tag: T): boolean;
    remove(tag: T): boolean;
}

/**
 * A variadic (rest-param) helper.
 */
export function merge<T>(sources: T[][]): T[];

/**
 * A function accepting an optional parameter and returning a tuple-like type.
 */
export function process<T>(items: T[], limit?: number): [T[], number];
