workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_interfaces_w80.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 342
expression: rendered
---
// <unrendered module>

/**
 * A greeter interface carrying an ordinary method plus a call signature and
 * an index signature.
 */
export interface Greeter {
    /**
     * An ordinary required method.
     */
    greet(name: string): string;
    Call(name: string): string;
    Index(key: string): unknown;
}
