workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_jsdoc_w80_no_docs.snap
---
source: workspace/compiler/tests/snap_typescript.rs
expression: rendered
---
// <unrendered module>

export interface Coordinate {}

export interface Location {}

export function formatCoord(coord: Coordinate, precision: number): string;

export function haversine(from: Coordinate, to: Coordinate): number;
