workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_jsdoc_w80_with_docs.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 483
expression: rendered
---
// <unrendered module>

/**
 * A geographic coordinate pair.
 * Latitude must be in [-90, 90] and longitude in [-180, 180].
 */
export interface Coordinate {
    /**
     * Degrees of latitude — positive is north.
     */
    readonly lat: number;
    /**
     * Degrees of longitude — positive is east.
     */
    readonly lng: number;
}

/**
 * A named geographic location.
 * Bundles a human-readable label with its coordinates.
 */
export interface Location {
    /**
     * Human-readable name of the place.
     */
    name: string;
    /**
     * Geographic position.
     */
    coords: Coordinate;
    /**
     * Optional description of the location.
     */
    description?: string;
}

/**
 * Format a coordinate as a human-readable string.
 */
export function formatCoord(coord: Coordinate, precision?: number): string;

/**
 * Calculate the Haversine distance between two coordinates (in kilometres).
 */
export function haversine(from: Coordinate, to: Coordinate): number;
