workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_kinds_w80.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 365
expression: rendered
---
// <unrendered module>

/**
 * An enum → Entry::SumType.
 */
export type Direction =
    | {
        tag: "Up";
        field0: number;
    }
    | {
        tag: "Down";
        field0: number;
    }
    | {
        tag: "Left";
        field0: number;
    }
    | {
        tag: "Right";
        field0: number;
    };

/**
 * A const enum — variants flagged `[const]` in documentation.
 */
export type HttpStatus =
    | {
        tag: "Ok";
        field0: number;
    }
    | {
        tag: "NotFound";
        field0: number;
    };

/**
 * A const declaration → Entry::Constant.
 */
// <unrendered constant>

type NullOnly = null;

/**
 * An interface → Entry::TraitDef.
 */
export interface Printable {
    print(): void;
}

/**
 * A type alias → Entry::TypeAlias.
 */
type StringOrNumber = string | number;

/**
 * void is unit Tuple; null is a named reference — they must not collapse.
 */
type VoidOnly = void;

/**
 * A class → Entry::RecordType.
 */
export interface Widget {
    /**
     * Private brand field — must keep `#` prefix + Private visibility.
     */
    #brand: string;
    readonly id: string;
}

export function constructor(id: string): void;

/**
 * A let declaration → Entry::Variable.
 */
// <unrendered variable>

/**
 * A plain function → Entry::Function.
 */
export function doWork(x: number): number;

/**
 * A namespace → Entry::Module.
 */
// <unrendered module>

export function identity<T>(x: T): T;
