workspace/compiler/tests/snapshots/test_snap_typescript__ts_render_toolkit_w80.snap
---
source: workspace/compiler/tests/snap_typescript.rs
assertion_line: 406
expression: rendered
---
// <unrendered module>

/**
 * Incrementally assembles a path from segments.
 */
export interface Builder {
    #segments: string[];
}

/**
 * Materialize the accumulated path.
 */
export function build(): string;

/**
 * Append a segment.
 */
export function push(segment: string): this;

export function install(): void;

/**
 * A namespace grouping toolkit helpers.
 */
// <unrendered module>

/**
 * The toolkit version.
 */
// <unrendered constant>

/**
 * A helper reachable through the namespace.
 */
export function help(): string;
